k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-msa-hw1
  labels:
    app: eznd-otus-msa-hw1
spec:
  selector:
    app: eznd-otus-msa-hw1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
