k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    kubernetes.io/ingress.class: nginx
  name: ig-otus-msa-hw1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otus-msa-hw1
                port:
                  number: 80
